--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,6 +1,7 @@
 .chat {
     flex: 0.65;
-    
+    display: flex;
+    flex-direction: column;
 }
 .chat__header {
     display: flex;
@@ -23,4 +24,56 @@
     display: flex;
     justify-content: space-between;
     min-width: 100px;
+}
+.chat__body {
+    background-image: url("https://i.pinimg.com/originals/ab/ab/60/abab60f06ab52fa7846593e6ae0c9a0b.png");
+    flex: 1;
+    background-repeat: repeat;
+    background-position: center;
+    padding: 30px;
+    overflow: scroll;
+}
+.chat__message {
+    position: relative;
+    font-size: 16px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+    width: fit-content;
+    margin-bottom: 20px;
+}
+.chat__name {
+    position: absolute;
+    top: -15px;
+    font-weight: 600;
+    font-size: xx-small;
+}
+.chat__timestamp{
+    margin-left: 10px;
+    font-size: xx-small;
+}
+.chat__reciever {
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+.chat__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 62px;
+    border-top: 1px solid lightgray;
+}
+.chat__footer >form  {
+    flex: 1;
+    display: flex;
+}
+.chat__footer >form >input {
+    flex: 1;
+    border-radius: 20px;
+    padding: 10px;
+    border: none;
+    margin: 7px;
+}
+.chat__footer >form >button {
+    display: none;
 }
